# OrganismSim-CPP

./: .gitmodules  Animal.cc  Animals.hh  CollisionData.hh  Fox.hh  Guarana.cc  Human.hh  InputHandler.cc  Makefile  Organism.cc  OrganismFactory.cc  Plant.cc  Plant.hh  Plants.hh  README.md  Simulator.cc  Simulator.hh  Turtle.cc  Turtle.hh  Wolf.hh  World.hh  main.cc  meson.build
include/: Math.hh  Math.tcc  Organism.hh  OrganismFactory.hh  Simulator.hh
include/animals/: Animal.hh  Antelope.hh  Sheep.hh
include/plants/: Belladonna.hh  Dandelion.hh  Grass.hh  Guarana.hh  Sosnowsky.hh
src/: CollisionData.cc  OrganismFactory.cc  Simulator.cc  World.cc  meson.build
src/animals/: Antelope.cc  Fox.cc  Human.cc  Sheep.cc  Wolf.cc  meson.build
src/plants/: Belladonna.cc  Dandelion.cc  Grass.cc  Sosnowsky.cc  meson.build
